# musical-instrument-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: constants.py
frontend/: .gitignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: audio-preview.tsx  batch-results.tsx  error-boundary.tsx  file-uploader.tsx  loading-skeleton.tsx  prediction-result.tsx  theme-toggle.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/hooks/: useClassifier.ts
frontend/src/lib/: api.ts
report/: main.tex
report/chapters/: 00a_abstract.tex  00b_resume.tex  01_introduction.tex  02_context.tex  03_tools.tex  04_methodology.tex  05_implementation.tex  06_results.tex  06b_challenges.tex  07_conclusion.tex  08_appendix.tex
src/api/: config.py  dependencies.py  main.py
src/api/routers/: audio.py  batch.py  image.py
src/api/schemas/: prediction.py
src/api/services/: audio_service.py  image_service.py
src/audio/: 00_Data_Preparation.ipynb  01_Data_Preparation.ipynb  02_Model_Training.ipynb  03_Test_Model.ipynb
src/image/: 02_Model_Training.ipynb  03_Test_Model.ipynb
utils/: calculate.py  embedding_extraction.py  extract_manual_test_data.py  generate_audio_csv.py  generate_image_csv.py  image_plot.py  image_processing.py  model_builder.py  normalize.py  plot.py  train_utils.py
